--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -33,6 +33,14 @@
     </table>
     
     <br />
+
+    <h5>Last login session: {{ last_login }}</h5>
+
+    <a href="{% url 'main:logout' %}">
+        <button>
+            Logout
+        </button>
+    </a>
     
     <a href="{% url 'main:create_product' %}">
         <button>
