--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,19 +1,52 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% block content %}
-<h1>Add New Product</h1>
+<style>
+    .body {
+        background-color: #333; /* Dark gray color */
+        color: #fff; /* Text color set to white */
+        padding: 50px;
+    }
+    .card {
+        background-color: #555;
+        margin-top: 50px; /* Adjust the margin as needed */
+        padding: 20px;
+        border-radius: 10px;
+    }
 
-<form method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Add Product"/>
-            </td>
-        </tr>
-    </table>
-</form>
+    .form-group {
+        margin-bottom: 15px;
+    }
+
+    .card-header {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .btn-block {
+        width: 100%;
+    }
+</style>
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <h1>Add New Product</h1>
+                </div>
+                <div class="card-body">
+                    <form method="POST">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            {{ form.as_p }}
+                        </div>
+                        <button type="submit" class="btn btn-light btn-block">Add Product</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
