--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -4,19 +4,16 @@
 
 {% block content %}
 
-<h1>Edit Product</h1>
+<div class="container bg-light p-4">
+    <h1 class="mt-4">Edit Product</h1>
 
-<form method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Edit Product"/>
-            </td>
-        </tr>
-    </table>
-</form>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.as_p }}
+        </div>
+        <button type="submit" class="btn btn-primary">Edit Product</button>
+    </form>
+</div>
 
 {% endblock %}
