--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,110 +1,73 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">B-Inventory</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+<style>
+    body {
+        background-color: #212529;
+    }
+    .highlighted-item {
+        background-color: #FFD700; /* Yellow background color */
+        color: #000000; /* Black text color */
+    }
+</style>
+<nav class="navbar navbar-dark bg-dark border-bottom">
+    <div class="container">
+        <a class="navbar-brand" href="#">B-Inventory | Welcome {{ name }}!</a>
+        <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
-      </div>
     </div>
-  </nav>
+</nav>
 
+<div class="container mt-4 text-light">
     <h1>B-Inventory</h1>
 
-    <h5>Name:</h5>
-    <p>{{name}}</p>
+    <div class="mb-3">
 
-    <h5>Class:</h5>
-    <p>{{class}}</p>
+        <p>You have added {{ product_count }} Items in the inventory!</p>
+    </div>
 
-    <p>You have added {{ product_count }} Items in the inventory!</p>
-
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Amount</th>
-            <th>Price</th>
-            <th>Description</th>
-            <th>Date Added</th>
-        </tr>
-    
-        {% comment %} Below is how to show the product data {% endcomment %}
-    
-        {% for product in products %}
+    <table class="table table-dark">
+        <thead>
             <tr>
-                <td>{{product.name}}</td>
-                <td>{{product.amount}}</td>
-                <td>{{product.price}}</td>
-                <td>{{product.description}}</td>
-                <td>{{product.date_added}}</td>
-                <td>
-                    <form method="post">
-                        {% csrf_token %}
-                        <button type="submit" name="increment" value="{{ product.id }}">
-                            Increment Amount
-                        </button>
-                        <button type="submit" name="decrement" value="{{ product.id }}">
-                            Decrement Amount
-                        </button>
-                        <button type="submit" name="delete" value="{{ product.id }}">
-                            Delete Item
-                        </button>  
-                    </form>
-                </td>
-                <td>
-                    <a href="{% url 'main:edit_product' product.pk %}">
-                        <button>
-                            Edit
-                        </button>
-                    </a>
-                </td>
+                <th>Name</th>
+                <th>Amount</th>
+                <th>Price</th>
+                <th>Description</th>
+                <th>Date Added</th>
+                <th>Actions</th>
             </tr>
-        {% endfor %}
+        </thead>
+        <tbody>
+            {% for product in products %}
+                <tr {% if forloop.last %}class="highlighted-item"{% endif %}>
+                    <td>{{ product.name }}</td>
+                    <td>{{ product.amount }}</td>
+                    <td>{{ product.price }}</td>
+                    <td>{{ product.description }}</td>
+                    <td>{{ product.date_added }}</td>
+                    <td>
+                        <form method="post">
+                            {% csrf_token %}
+                            <button type="submit" name="increment" value="{{ product.id }}" class="btn btn-sm btn-success">Increment</button>
+                            <button type="submit" name="decrement" value="{{ product.id }}" class="btn btn-sm btn-warning">Decrement</button>
+                            <button type="submit" name="delete" value="{{ product.id }}" class="btn btn-sm btn-danger">Delete</button>
+                        </form>
+                        <a href="{% url 'main:edit_product' product.pk %}" class="btn btn-sm btn-primary">Edit</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
     </table>
-    
+
     <br />
 
     <h5>Last login session: {{ last_login }}</h5>
 
-    <a href="{% url 'main:logout' %}">
-        <button>
-            Logout
-        </button>
-    </a>
-    
-    <a href="{% url 'main:create_product' %}">
-        <button>
-            Add New Item
-        </button>
-    </a>
+    <a href="{% url 'main:logout' %}" class="btn btn-danger">Logout</a>
+
+    <a href="{% url 'main:create_product' %}" class="btn btn-primary">Add New Item</a>
+</div>
 
 {% endblock content %}
